--- a/google/pom.xml
+++ b/google/pom.xml
@@ -50,5 +50,10 @@
       <artifactId>google-compute-engine</artifactId>
       <version>${jclouds.version}</version>
     </dependency>
+    <dependency>
+      <groupId>org.apache.jclouds.labs</groupId>
+      <artifactId>google-cloud-storage</artifactId>
+      <version>1.8.0</version>
+    </dependency>
   </dependencies>
 </project>
